--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      // this enables stricter inference for data properties on `this`
-      "strict": true,
-      "jsx": "preserve",
-      "moduleResolution": "node"
-    }
+  "compilerOptions": {
+    "lib": ["dom", "es5", "es2015"],
+    "target": "es5",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true
   }
+}
